syntax_check.txt
file:///C:/Users/sergi/Desktop/MiApp/Sheila/src/translations/translations.js:308
  en: {
  ^^

SyntaxError: Missing initializer in const declaration
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)

Node.js v20.19.6
